--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2002-10-15 Bruce Momjian <pgman@candle.pha.pa.us>
+
+    * distribution moved to http://gborg.postgresql.org/project/dbdpg/projdisplay.php
+    
 2002-04-27 Jeffrey W. Baker <jwbaker@acm.org>
 
     * dbdimp.c: Add default at end of switch statement for pg_type attrib.
