--- a/README
+++ b/README
@@ -30,19 +30,6 @@ For information about PostgreSQL, visit:
     
 	http://www.postgresql.org/
 
-CHANGES:
----------------
-
-Since version 1.12
- - add definition for missing type 'numeric' and fix segfault in pg_type
-Since version 1.11
- - implement missing metadata methods and change existing ones
-Since version 1.10
- - fix a lot of quoting and placeholder bugs
-Since version 1.01
- - fix reuse of freed memory after PQfinish
- - use PerlIO abstraction
-
 COPYRIGHT:
 ----------
 
@@ -78,9 +65,9 @@ in your bug-report.
 REQUIREMENTS:
 -------------
 
-  - build, test and install Perl 5         (at least 5.004)
-  - build, test and install the DBI module (at least 1.21)
-  - build, test and install PostgreSQL     (at least 6.5)
+	build, test and install Perl 5         (at least 5.005)
+	build, test and install the DBI module (at least 1.30)
+	build, test and install PostgreSQL     (at least 7.3)
 
 
 INSTALLATION:
@@ -88,14 +75,13 @@ INSTALLATION:
 
 The Makefile checks the environment variables POSTGRES_INCLUDE and
 POSTGRES_LIB, to find the library libpq.so and the proper include files.
- 
-1.   perl Makefile.PL
-2.   make
-3.   make test
-4.   make install
+	 
+	1.   perl Makefile.PL
+	2.   make
+	3.   make test
+	4.   make install
 
-( 1. to 3. as normal user, not as root ! )
-
+Do steps 1 to 3 as normal user, not as root!
 
 
 TESTING:
@@ -104,64 +90,72 @@ TESTING:
 The tests are designed to connect to a live database.  The following
 environment variables must be set for the tests to run:
 
-DBDPG_MAINTAINER=1
-DBDPG_TEST_HOST=<hostname>
-DBDPG_TEST_DB=<database>
-DBDPG_TEST_USER=<user>
-DBDPG_TEST_PASS=<password>
+	DBDPG_MAINTAINER=1
+	DBDPG_TEST_HOST=<hostname>
+	DBDPG_TEST_DB=<database>
+	DBDPG_TEST_USER=<user>
+	DBDPG_TEST_PASS=<password>
 
-If you are using the shared library libpq.so check if your dynamic loader 
-finds libpq.so. With Linux the command /sbin/ldconfig -v should tell you, 
-where it finds libpq.so. If ldconfig does not find libpq.so, either add an 
-appropriate entry to /etc/ld.so.conf and re-run ldconfig or add the path to 
-the environment variable LD_LIBRARY_PATH. 
+If you are using the shared library libpq.so check if your dynamic
+loader  finds libpq.so. With Linux the command /sbin/ldconfig -v should
+tell you,  where it finds libpq.so. If ldconfig does not find libpq.so,
+either add an  appropriate entry to /etc/ld.so.conf and re-run ldconfig
+or add the path to  the environment variable LD_LIBRARY_PATH.
+
 A typical error message resulting from not finding libpq.so is: 
 
-  install_driver(Pg) failed: Can't load './blib/arch/auto/DBD/Pg/Pg.so' 
-  for module DBD::Pg: File not found at 
+	install_driver(Pg) failed: Can't load './blib/arch/auto/DBD/Pg/Pg.so' 
+	for module DBD::Pg: File not found at 
 
 If you get an error message like:
 
-  perl: error while loading shared libraries:
-  /usr/lib/perl5/site_perl/5.6.0/i386-linux/auto/DBD/Pg/Pg.so: undefined
-  symbol: PQconnectdb
+	perl: error while loading shared libraries:
+	/usr/lib/perl5/site_perl/5.6.0/i386-linux/auto/DBD/Pg/Pg.so: undefined
+	symbol: PQconnectdb
 
 when you call DBI->connect, then your libpq.so was probably not seen at
 build-time. This should have caused 'make test' to fail; did you really
 run it and look at the output? Check the setting of POSTGRES_LIB and
 recompile DBD-Pg.
  
-Some linux distributions have incomplete perl installations.
-If you have compile errors like "XS_VERSION_BOOTCHECK undeclared", make a
-          'find .../lib/perl5 -name XSUB.h -print'
+Some linux distributions have incomplete perl installations. If you have
+compile errors like "XS_VERSION_BOOTCHECK undeclared", do:
+
+	find .../lib/perl5 -name XSUB.h -print
+
 If this file is not present, you need to recompile and re-install perl.
 
-SGI users: if you get segmentation faults make sure, you use the malloc which 
-           comes with perl when compiling perl (the default is not to).
-           "David R. Noble" <drnoble@engsci.sandia.gov>
+SGI users: if you get segmentation faults make sure, you use the malloc
+which  comes with perl when compiling perl (the default is not to).
+"David R. Noble" <drnoble@engsci.sandia.gov>
 
 HP users: if you get error messages like:
-              can't open shared library: .../lib/libpq.sl
-              No such file or directory
-          when running the test script, try to replace the 
-          'shared' option in the LDDFLAGS with 'archive'.
-          Dan Lauterbach <danla@dimensional.com>
+
+	can't open shared library: .../lib/libpq.sl
+	No such file or directory
+
+when running the test script, try to replace the  'shared' option in the
+LDDFLAGS with 'archive'. Dan Lauterbach <danla@dimensional.com>
 
 FreeBSD users: if you get during make test the error message:
-    'DBD driver has not implemented the AutoCommit attribute'
-    recompile the DBI module and the DBD-Pg module and disable
-    optimization. This error message is due to the broken
-    optimization in gcc-2.7.2.1.
+
+	'DBD driver has not implemented the AutoCommit attribute'
+
+recompile the DBI module and the DBD-Pg module and disable optimization.
+This error message is due to the broken optimization in gcc-2.7.2.1.
 
 Sun Users: if you get compile errors like:
-           /usr/include/string.h:57: parse error before `]'
-           then you need to remove from pgsql/include/libpq-fe.h
-           the define for strerror, which clashes with the definition
-           in the standard include file.
 
+	/usr/include/string.h:57: parse error before `]'
+
+then you need to remove from pgsql/include/libpq-fe.h the define for
+strerror, which clashes with the definition in the standard include
+file.
 
 Win32 Users: Running DBD-Pg scripts on Win32 needs some configuration work
-             on the server side:
-             - add a postgres user with the same name as the NT-User (eg Administrator)
-             - make sure, that your pg_hba.conf on the server is configured, 
-               such that a connection from another host will be accepted
+on the server side:
+
+	o add a postgres user with the same name as the NT-User 
+	  (eg Administrator)
+	o make sure, that your pg_hba.conf on the server is configured,
+	  such that a connection from another host will be accepted
