Fix table_attributes to handle removal of pg_relcheck in 7.3, from Ian Barwick <barwick@gmx.net>

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 1.21
       - System tables no longer returned by tables(). [Dave Rolsky]
+      -	Fix table_attributes to handle removal of pg_relcheck in 7.3,
+	from Ian Barwick <barwick@gmx.net>
 
 1.20  Wed Nov 27 16:19:26 2002
       - Maintenance transferred to GBorg,
